--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,8 +14,9 @@ build-gd:
     - master
     - api
   variables:
-    VARIANT_NAME: "gd"
-    VARIANT_TAG: "gd-v1.0.0"
+    VARIANT_TAG: "gd"
+    VARIANT_TAG_WITH_VERSION: "gd-v1.0.0"
+    VARIANT_BUILD_DIR: "variants/alpine/gd"
   before_script:
     - date '+%Y-%m-%d %H:%M:%S %z'
 
@@ -29,16 +30,20 @@ build-gd:
     - date '+%Y-%m-%d %H:%M:%S %z'
     - docker build
       -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
+      -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_VERSION}"
       -t "${CI_REGISTRY_IMAGE}:${VARIANT_TAG}"
-      "./variants/${VARIANT_NAME}"
+      -t "${CI_REGISTRY_IMAGE}:${VARIANT_TAG_WITH_VERSION}"
+      "${VARIANT_BUILD_DIR}"
 
     - date '+%Y-%m-%d %H:%M:%S %z'
 
     # Push to Docker Hub registry. E.g. 'namespace/my-project:tag'
     - docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
+    - docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_VERSION}"
 
     # Push to GitLab registry. E.g. 'registry.gitlab.com/namespace/my-project:tag
     - docker push "${CI_REGISTRY_IMAGE}:${VARIANT_TAG}"
+    - docker push "${CI_REGISTRY_IMAGE}:${VARIANT_TAG_WITH_VERSION}"
 
   after_script:
     - date '+%Y-%m-%d %H:%M:%S %z'
@@ -55,8 +60,9 @@ build-mysqli:
     - master
     - api
   variables:
-    VARIANT_NAME: "mysqli"
-    VARIANT_TAG: "mysqli-v1.0.0"
+    VARIANT_TAG: "mysqli"
+    VARIANT_TAG_WITH_VERSION: "mysqli-v1.0.0"
+    VARIANT_BUILD_DIR: "variants/alpine/mysqli"
   before_script:
     - date '+%Y-%m-%d %H:%M:%S %z'
 
@@ -70,16 +76,20 @@ build-mysqli:
     - date '+%Y-%m-%d %H:%M:%S %z'
     - docker build
       -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
+      -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_VERSION}"
       -t "${CI_REGISTRY_IMAGE}:${VARIANT_TAG}"
-      "./variants/${VARIANT_NAME}"
+      -t "${CI_REGISTRY_IMAGE}:${VARIANT_TAG_WITH_VERSION}"
+      "${VARIANT_BUILD_DIR}"
 
     - date '+%Y-%m-%d %H:%M:%S %z'
 
     # Push to Docker Hub registry. E.g. 'namespace/my-project:tag'
     - docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
+    - docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_VERSION}"
 
     # Push to GitLab registry. E.g. 'registry.gitlab.com/namespace/my-project:tag
     - docker push "${CI_REGISTRY_IMAGE}:${VARIANT_TAG}"
+    - docker push "${CI_REGISTRY_IMAGE}:${VARIANT_TAG_WITH_VERSION}"
 
   after_script:
     - date '+%Y-%m-%d %H:%M:%S %z'
@@ -96,8 +106,9 @@ build-mysqli-gd:
     - master
     - api
   variables:
-    VARIANT_NAME: "mysqli-gd"
-    VARIANT_TAG: "mysqli-gd-v1.0.0"
+    VARIANT_TAG: "mysqli-gd"
+    VARIANT_TAG_WITH_VERSION: "mysqli-gd-v1.0.0"
+    VARIANT_BUILD_DIR: "variants/alpine/mysqli-gd"
   before_script:
     - date '+%Y-%m-%d %H:%M:%S %z'
 
@@ -111,16 +122,20 @@ build-mysqli-gd:
     - date '+%Y-%m-%d %H:%M:%S %z'
     - docker build
       -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
+      -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_VERSION}"
       -t "${CI_REGISTRY_IMAGE}:${VARIANT_TAG}"
-      "./variants/${VARIANT_NAME}"
+      -t "${CI_REGISTRY_IMAGE}:${VARIANT_TAG_WITH_VERSION}"
+      "${VARIANT_BUILD_DIR}"
 
     - date '+%Y-%m-%d %H:%M:%S %z'
 
     # Push to Docker Hub registry. E.g. 'namespace/my-project:tag'
     - docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
+    - docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_VERSION}"
 
     # Push to GitLab registry. E.g. 'registry.gitlab.com/namespace/my-project:tag
     - docker push "${CI_REGISTRY_IMAGE}:${VARIANT_TAG}"
+    - docker push "${CI_REGISTRY_IMAGE}:${VARIANT_TAG_WITH_VERSION}"
 
   after_script:
     - date '+%Y-%m-%d %H:%M:%S %z'
