revise variant templates; regenerate variant build context files

--- a/variants/alpine/mysqli/Dockerfile
+++ b/variants/alpine/mysqli/Dockerfile
@@ -1,8 +1,7 @@
 FROM php:7.2-fpm-alpine
 
 # mysqli (deprecated)
-RUN docker-php-ext-install mysqli
-
-# Cleanup
-RUN rm -rf /usr/src/php \
+RUN docker-php-ext-install -j$(nproc) mysqli &&
+    && rm -rf /usr/src/php \
     && rm -rf /var/cache/apk/*
+
