--- a/variants/alpine/mysqli-gd/Dockerfile
+++ b/variants/alpine/mysqli-gd/Dockerfile
@@ -1,7 +1,9 @@
 FROM php:7.2-fpm-alpine
 
 # mysqli (deprecated)
-RUN docker-php-ext-install mysqli
+RUN docker-php-ext-install -j$(nproc) mysqli &&
+    && rm -rf /usr/src/php \
+    && rm -rf /var/cache/apk/*
 
 # gd
 RUN apk update \
@@ -13,7 +15,6 @@ RUN apk update \
         --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd \
     && apk del --no-cache freetype-dev libpng-dev libjpeg-turbo-dev
-
-# Cleanup
-RUN rm -rf /usr/src/php \
+    && rm -rf /usr/src/php \
     && rm -rf /var/cache/apk/*
+
