--- a/variants/alpine/mysqli-gd/Dockerfile
+++ b/variants/alpine/mysqli-gd/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:7.2-fpm-alpine
 
 # mysqli (deprecated)
-RUN docker-php-ext-install -j$(nproc) mysqli &&
+RUN docker-php-ext-install -j$(nproc) mysqli && \
     && rm -rf /usr/src/php \
     && rm -rf /var/cache/apk/*
 
@@ -14,7 +14,7 @@ RUN apk update \
         --with-png-dir=/usr/include/ \
         --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd \
-    && apk del --no-cache freetype-dev libpng-dev libjpeg-turbo-dev
+    && apk del --no-cache freetype-dev libpng-dev libjpeg-turbo-dev \
     && rm -rf /usr/src/php \
     && rm -rf /var/cache/apk/*
 
