fix Dockerfile syntax errors

--- a/variants/alpine/mysqli-gd/Dockerfile
+++ b/variants/alpine/mysqli-gd/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:7.2-fpm-alpine
 
 # mysqli (deprecated)
-RUN docker-php-ext-install -j$(nproc) mysqli && \
+RUN docker-php-ext-install -j$(nproc) mysqli \
     && rm -rf /usr/src/php \
     && rm -rf /var/cache/apk/*
 
