trigger rebuild smaller xdebug and mysqli variants

--- a/variants/alpine/mysqli-gd-xdebug/Dockerfile
+++ b/variants/alpine/mysqli-gd-xdebug/Dockerfile
@@ -2,8 +2,7 @@ FROM php:7.2-fpm-alpine
 
 # mysqli (deprecated)
 RUN docker-php-ext-install -j$(nproc) mysqli \
-    && rm -rf /usr/src/php \
-    && rm -rf /var/cache/apk/*
+    && docker-php-source delete
 
 # gd
 RUN apk update \
@@ -15,11 +14,14 @@ RUN apk update \
         --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd \
     && apk del --no-cache freetype-dev libpng-dev libjpeg-turbo-dev \
-    && rm -rf /usr/src/php \
+    && docker-php-source delete \
     && rm -rf /var/cache/apk/*
 
 # Xdebug: https://stackoverflow.com/questions/46825502/how-do-i-install-xdebug-on-dockers-official-php-fpm-alpine-image
+# PHPIZE_DEPS: autoconf dpkg-dev dpkg file g++ gcc libc-dev make pkgconf re2c
 RUN apk add --no-cache $PHPIZE_DEPS \
     && pecl install xdebug-2.6.0 \
-    && docker-php-ext-enable xdebug
+    && docker-php-ext-enable xdebug \
+    && docker-php-source delete \
+    && apk del --purge autoconf g++ make
 
