--- a/variants/alpine/mysqli-gd/Dockerfile
+++ b/variants/alpine/mysqli-gd/Dockerfile
@@ -2,8 +2,7 @@ FROM php:7.2-fpm-alpine
 
 # mysqli (deprecated)
 RUN docker-php-ext-install -j$(nproc) mysqli \
-    && rm -rf /usr/src/php \
-    && rm -rf /var/cache/apk/*
+    && docker-php-source delete
 
 # gd
 RUN apk update \
@@ -15,6 +14,6 @@ RUN apk update \
         --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd \
     && apk del --no-cache freetype-dev libpng-dev libjpeg-turbo-dev \
-    && rm -rf /usr/src/php \
+    && docker-php-source delete \
     && rm -rf /var/cache/apk/*
 
