--- a/variants/alpine/xdebug/Dockerfile
+++ b/variants/alpine/xdebug/Dockerfile
@@ -2,9 +2,9 @@ FROM php:7.2-fpm-alpine
 
 # Xdebug: https://stackoverflow.com/questions/46825502/how-do-i-install-xdebug-on-dockers-official-php-fpm-alpine-image
 # PHPIZE_DEPS: autoconf dpkg-dev dpkg file g++ gcc libc-dev make pkgconf re2c
-RUN apk add --no-cache $PHPIZE_DEPS \
+RUN apk add --no-cache --virtual .build-dependencies $PHPIZE_DEPS \
     && pecl install xdebug-2.6.0 \
     && docker-php-ext-enable xdebug \
     && docker-php-source delete \
-    && apk del --purge autoconf g++ make
+    && apk del .build-dependencies
 
