--- a/variants/alpine/mysqli-gd-pdo-xdebug/Dockerfile
+++ b/variants/alpine/mysqli-gd-pdo-xdebug/Dockerfile
@@ -14,6 +14,14 @@ RUN apk add --no-cache freetype libpng libjpeg-turbo freetype-dev libpng-dev lib
     && apk del --no-cache freetype-dev libpng-dev libjpeg-turbo-dev \
     && docker-php-source delete \
 
+# PDO: mysql driver
+RUN docker-php-ext-install pdo pdo_mysql
+
+# PDO: pgsql driver
+# See: https://github.com/docker-library/php/issues/221
+RUN apk add --no-cache --virtual .pgsql-build-dependencies postgresql-dev \
+    && docker-php-ext-install pdo pdo_pgsql
+
 # Xdebug: https://stackoverflow.com/questions/46825502/how-do-i-install-xdebug-on-dockers-official-php-fpm-alpine-image
 # PHPIZE_DEPS: autoconf dpkg-dev dpkg file g++ gcc libc-dev make pkgconf re2c
 RUN apk add --no-cache --virtual .build-dependencies $PHPIZE_DEPS \
