--- a/variants/alpine/mysqli/Dockerfile
+++ b/variants/alpine/mysqli/Dockerfile
@@ -1,6 +1,5 @@
 FROM php:7.2-fpm-alpine
 
 # mysqli (deprecated)
-RUN docker-php-ext-install -j$(nproc) mysqli \
-    && docker-php-source delete
+RUN docker-php-ext-install mysqli
 
