--- a/variants/alpine/gd/Dockerfile
+++ b/variants/alpine/gd/Dockerfile
@@ -1,8 +1,7 @@
 FROM php:7.2-fpm-alpine
 
 # gd
-RUN apk update \
-    && apk add --no-cache freetype libpng libjpeg-turbo freetype-dev libpng-dev libjpeg-turbo-dev \
+RUN apk add --no-cache freetype libpng libjpeg-turbo freetype-dev libpng-dev libjpeg-turbo-dev \
     && docker-php-ext-configure gd \
         --with-gd \
         --with-freetype-dir=/usr/include/ \
@@ -11,5 +10,4 @@ RUN apk update \
     && docker-php-ext-install -j$(nproc) gd \
     && apk del --no-cache freetype-dev libpng-dev libjpeg-turbo-dev \
     && docker-php-source delete \
-    && rm -rf /var/cache/apk/*
 
