--- a/variants/alpine/mysqli-gd-xdebug/Dockerfile
+++ b/variants/alpine/mysqli-gd-xdebug/Dockerfile
@@ -11,8 +11,8 @@ RUN apk add --no-cache freetype libpng libjpeg-turbo freetype-dev libpng-dev lib
         --with-png-dir=/usr/include/ \
         --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd \
-    && apk del --no-cache freetype-dev libpng-dev libjpeg-turbo-dev \
-    && docker-php-source delete \
+    && apk del freetype-dev libpng-dev libjpeg-turbo-dev \
+    && docker-php-source delete
 
 # Xdebug: https://stackoverflow.com/questions/46825502/how-do-i-install-xdebug-on-dockers-official-php-fpm-alpine-image
 # PHPIZE_DEPS: autoconf dpkg-dev dpkg file g++ gcc libc-dev make pkgconf re2c
