try memcached again by fixing syntax error

--- a/variants/alpine/memcached/Dockerfile
+++ b/variants/alpine/memcached/Dockerfile
@@ -2,10 +2,9 @@ FROM php:7.2-fpm-alpine
 
 # memcached
 # See: https://stackoverflow.com/questions/40894385/how-can-i-install-the-php-memcached-extension-on-dockers-php7-alpine-image
-RUN MEMCACHED_DEPS zlib-dev libmemcached-dev cyrus-sasl-dev \
-    && apk add --no-cache --update libmemcached-libs zlib \
+RUN apk add --no-cache --update libmemcached-libs zlib \
     && apk add --no-cache --update --virtual .phpize-deps $PHPIZE_DEPS \
-    && apk add --no-cache --update --virtual .memcached-deps $MEMCACHED_DEPS \
+    && apk add --no-cache --update --virtual .memcached-deps zlib-dev libmemcached-dev cyrus-sasl-dev \
     && pecl install memcached \
     && echo "extension=memcached.so" > /usr/local/etc/php/conf.d/20_memcached.ini \
     && docker-php-source delete \
