Fix.github/workflows/build.yml template VARIANT_TAG_WITH_VERSION variable determination

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
         CI_PROJECT_NAME=$( echo "${GITHUB_REPOSITORY}" | rev | cut -d '/' -f 1 | rev )
 
         # Get 'ref-name' from 'refs/heads/ref-name'
-        VARIANT_TAG_WITH_VERSION=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+        VARIANT_TAG_WITH_VERSION="${VARIANT_TAG}-$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )"
 
         docker build \
           -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}" \
@@ -94,7 +94,7 @@ jobs:
         CI_PROJECT_NAME=$( echo "${GITHUB_REPOSITORY}" | rev | cut -d '/' -f 1 | rev )
 
         # Get 'ref-name' from 'refs/heads/ref-name'
-        VARIANT_TAG_WITH_VERSION=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+        VARIANT_TAG_WITH_VERSION="${VARIANT_TAG}-$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )"
 
         docker build \
           -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}" \
@@ -142,7 +142,7 @@ jobs:
         CI_PROJECT_NAME=$( echo "${GITHUB_REPOSITORY}" | rev | cut -d '/' -f 1 | rev )
 
         # Get 'ref-name' from 'refs/heads/ref-name'
-        VARIANT_TAG_WITH_VERSION=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+        VARIANT_TAG_WITH_VERSION="${VARIANT_TAG}-$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )"
 
         docker build \
           -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}" \
@@ -190,7 +190,7 @@ jobs:
         CI_PROJECT_NAME=$( echo "${GITHUB_REPOSITORY}" | rev | cut -d '/' -f 1 | rev )
 
         # Get 'ref-name' from 'refs/heads/ref-name'
-        VARIANT_TAG_WITH_VERSION=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+        VARIANT_TAG_WITH_VERSION="${VARIANT_TAG}-$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )"
 
         docker build \
           -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}" \
@@ -238,7 +238,7 @@ jobs:
         CI_PROJECT_NAME=$( echo "${GITHUB_REPOSITORY}" | rev | cut -d '/' -f 1 | rev )
 
         # Get 'ref-name' from 'refs/heads/ref-name'
-        VARIANT_TAG_WITH_VERSION=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+        VARIANT_TAG_WITH_VERSION="${VARIANT_TAG}-$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )"
 
         docker build \
           -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}" \
@@ -286,7 +286,7 @@ jobs:
         CI_PROJECT_NAME=$( echo "${GITHUB_REPOSITORY}" | rev | cut -d '/' -f 1 | rev )
 
         # Get 'ref-name' from 'refs/heads/ref-name'
-        VARIANT_TAG_WITH_VERSION=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+        VARIANT_TAG_WITH_VERSION="${VARIANT_TAG}-$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )"
 
         docker build \
           -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}" \
@@ -334,7 +334,7 @@ jobs:
         CI_PROJECT_NAME=$( echo "${GITHUB_REPOSITORY}" | rev | cut -d '/' -f 1 | rev )
 
         # Get 'ref-name' from 'refs/heads/ref-name'
-        VARIANT_TAG_WITH_VERSION=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+        VARIANT_TAG_WITH_VERSION="${VARIANT_TAG}-$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )"
 
         docker build \
           -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}" \
@@ -382,7 +382,7 @@ jobs:
         CI_PROJECT_NAME=$( echo "${GITHUB_REPOSITORY}" | rev | cut -d '/' -f 1 | rev )
 
         # Get 'ref-name' from 'refs/heads/ref-name'
-        VARIANT_TAG_WITH_VERSION=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+        VARIANT_TAG_WITH_VERSION="${VARIANT_TAG}-$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )"
 
         docker build \
           -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}" \
@@ -430,7 +430,7 @@ jobs:
         CI_PROJECT_NAME=$( echo "${GITHUB_REPOSITORY}" | rev | cut -d '/' -f 1 | rev )
 
         # Get 'ref-name' from 'refs/heads/ref-name'
-        VARIANT_TAG_WITH_VERSION=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+        VARIANT_TAG_WITH_VERSION="${VARIANT_TAG}-$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )"
 
         docker build \
           -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}" \
@@ -478,7 +478,7 @@ jobs:
         CI_PROJECT_NAME=$( echo "${GITHUB_REPOSITORY}" | rev | cut -d '/' -f 1 | rev )
 
         # Get 'ref-name' from 'refs/heads/ref-name'
-        VARIANT_TAG_WITH_VERSION=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+        VARIANT_TAG_WITH_VERSION="${VARIANT_TAG}-$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )"
 
         docker build \
           -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}" \
@@ -526,7 +526,7 @@ jobs:
         CI_PROJECT_NAME=$( echo "${GITHUB_REPOSITORY}" | rev | cut -d '/' -f 1 | rev )
 
         # Get 'ref-name' from 'refs/heads/ref-name'
-        VARIANT_TAG_WITH_VERSION=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+        VARIANT_TAG_WITH_VERSION="${VARIANT_TAG}-$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )"
 
         docker build \
           -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}" \
@@ -574,7 +574,7 @@ jobs:
         CI_PROJECT_NAME=$( echo "${GITHUB_REPOSITORY}" | rev | cut -d '/' -f 1 | rev )
 
         # Get 'ref-name' from 'refs/heads/ref-name'
-        VARIANT_TAG_WITH_VERSION=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+        VARIANT_TAG_WITH_VERSION="${VARIANT_TAG}-$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )"
 
         docker build \
           -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}" \
@@ -622,7 +622,7 @@ jobs:
         CI_PROJECT_NAME=$( echo "${GITHUB_REPOSITORY}" | rev | cut -d '/' -f 1 | rev )
 
         # Get 'ref-name' from 'refs/heads/ref-name'
-        VARIANT_TAG_WITH_VERSION=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+        VARIANT_TAG_WITH_VERSION="${VARIANT_TAG}-$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )"
 
         docker build \
           -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}" \
@@ -670,7 +670,7 @@ jobs:
         CI_PROJECT_NAME=$( echo "${GITHUB_REPOSITORY}" | rev | cut -d '/' -f 1 | rev )
 
         # Get 'ref-name' from 'refs/heads/ref-name'
-        VARIANT_TAG_WITH_VERSION=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+        VARIANT_TAG_WITH_VERSION="${VARIANT_TAG}-$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )"
 
         docker build \
           -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}" \
@@ -718,7 +718,7 @@ jobs:
         CI_PROJECT_NAME=$( echo "${GITHUB_REPOSITORY}" | rev | cut -d '/' -f 1 | rev )
 
         # Get 'ref-name' from 'refs/heads/ref-name'
-        VARIANT_TAG_WITH_VERSION=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+        VARIANT_TAG_WITH_VERSION="${VARIANT_TAG}-$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )"
 
         docker build \
           -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}" \
