--- a/variants/7.3.16-fpm-alpine3.11-opcache-mysqli-gd-pdo-memcached-xdebug/Dockerfile
+++ b/variants/7.3.16-fpm-alpine3.11-opcache-mysqli-gd-pdo-memcached-xdebug/Dockerfile
@@ -39,7 +39,7 @@ RUN apk add --no-cache libmemcached-libs zlib \
 # Xdebug: https://stackoverflow.com/questions/46825502/how-do-i-install-xdebug-on-dockers-official-php-fpm-alpine-image
 # PHPIZE_DEPS: autoconf dpkg-dev dpkg file g++ gcc libc-dev make pkgconf re2c
 RUN apk add --no-cache --virtual .build-dependencies $PHPIZE_DEPS \
-    && pecl install xdebug-2.6.0 \
+    && pecl install xdebug \
     && docker-php-ext-enable xdebug \
     && docker-php-source delete \
     && apk del .build-dependencies
