--- a/variants/7.2.34-fpm-alpine3.12-opcache-mysqli-gd-pdo-memcached-sockets-xdebug/Dockerfile
+++ b/variants/7.2.34-fpm-alpine3.12-opcache-mysqli-gd-pdo-memcached-sockets-xdebug/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.2.29-fpm-alpine3.10
+FROM php:7.2.34-fpm-alpine3.12
 
 # opcache
 RUN docker-php-ext-install opcache
@@ -35,6 +35,10 @@ RUN apk add --no-cache libmemcached-libs zlib \
     && docker-php-source delete \
     && apk del .memcached-deps .phpize-deps \
     && df -h
+
+# Sockets
+# See: https://github.com/docker-library/php/issues/181#issuecomment-173365852
+RUN docker-php-ext-install sockets
 
 # Xdebug: https://stackoverflow.com/questions/46825502/how-do-i-install-xdebug-on-dockers-official-php-fpm-alpine-image
 # PHPIZE_DEPS: autoconf dpkg-dev dpkg file g++ gcc libc-dev make pkgconf re2c
