--- a/variants/7.2.34-fpm-alpine3.12-opcache-mysqli-gd-pdo/Dockerfile
+++ b/variants/7.2.34-fpm-alpine3.12-opcache-mysqli-gd-pdo/Dockerfile
@@ -1,4 +1,10 @@
-FROM php:7.2.29-fpm-alpine3.10
+FROM php:7.2.34-fpm-alpine3.12
+
+# opcache
+RUN docker-php-ext-install opcache
+
+# mysqli (deprecated)
+RUN docker-php-ext-install mysqli
 
 # gd
 RUN apk add --no-cache freetype libpng libjpeg-turbo freetype-dev libpng-dev libjpeg-turbo-dev \
@@ -10,6 +16,14 @@ RUN apk add --no-cache freetype libpng libjpeg-turbo freetype-dev libpng-dev lib
     && docker-php-ext-install -j$(nproc) gd \
     && apk del freetype-dev libpng-dev libjpeg-turbo-dev \
     && docker-php-source delete
+
+# PDO: mysql driver
+RUN docker-php-ext-install pdo pdo_mysql
+
+# PDO: pgsql driver
+# See: https://github.com/docker-library/php/issues/221
+RUN apk add --no-cache --virtual .pgsql-build-dependencies postgresql-dev \
+    && docker-php-ext-install pdo pdo_pgsql
 
 
 
