--- a/variants/7.2.34-fpm-alpine3.12-opcache-mysqli-gd-xdebug/Dockerfile
+++ b/variants/7.2.34-fpm-alpine3.12-opcache-mysqli-gd-xdebug/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.2.29-fpm-alpine3.10
+FROM php:7.2.34-fpm-alpine3.12
 
 # opcache
 RUN docker-php-ext-install opcache
@@ -16,6 +16,14 @@ RUN apk add --no-cache freetype libpng libjpeg-turbo freetype-dev libpng-dev lib
     && docker-php-ext-install -j$(nproc) gd \
     && apk del freetype-dev libpng-dev libjpeg-turbo-dev \
     && docker-php-source delete
+
+# Xdebug: https://stackoverflow.com/questions/46825502/how-do-i-install-xdebug-on-dockers-official-php-fpm-alpine-image
+# PHPIZE_DEPS: autoconf dpkg-dev dpkg file g++ gcc libc-dev make pkgconf re2c
+RUN apk add --no-cache --virtual .build-dependencies $PHPIZE_DEPS \
+    && pecl install xdebug \
+    && docker-php-ext-enable xdebug \
+    && docker-php-source delete \
+    && apk del .build-dependencies
 
 
 
