--- a/variants/7.3.26-fpm-alpine3.13-opcache-mysqli-gd/Dockerfile
+++ b/variants/7.3.26-fpm-alpine3.13-opcache-mysqli-gd/Dockerfile
@@ -1,4 +1,10 @@
-FROM php:7.3.16-fpm-alpine3.11
+FROM php:7.3.26-fpm-alpine3.13
+
+# opcache
+RUN docker-php-ext-install opcache
+
+# mysqli (deprecated)
+RUN docker-php-ext-install mysqli
 
 # gd
 RUN apk add --no-cache freetype libpng libjpeg-turbo freetype-dev libpng-dev libjpeg-turbo-dev \
