--- a/.github/workflows/ci-master-pr.yml
+++ b/.github/workflows/ci-master-pr.yml
@@ -1151,7 +1151,7 @@ jobs:
 
   update-dockerhub-description:
     needs: [build-8-0-25-fpm-alpine3-15-opcache-mysqli-gd-pdo-memcached-sockets, build-8-0-25-fpm-alpine3-15-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-4-32-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets, build-7-4-32-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-3-33-fpm-alpine3-15-opcache-mysqli-gd-pdo-memcached-sockets, build-7-3-33-fpm-alpine3-15-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-2-34-fpm-alpine3-12-opcache-mysqli-gd-pdo-memcached-sockets, build-7-2-34-fpm-alpine3-12-opcache-mysqli-gd-pdo-memcached-sockets-xdebug]
-    if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/')
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
